--- a/src/components/Badge/badge.scss
+++ b/src/components/Badge/badge.scss
@@ -37,7 +37,7 @@
     border-color: var(--color-blue);
   }
   &--fourth {
-    background: var(--color-marine);
-    border-color: var(--color-marine);
+    background: var(--color-gray);
+    border-color: var(--color-gray);
   }
 }
