--- a/src/components/Flag/flag.scss
+++ b/src/components/Flag/flag.scss
@@ -10,7 +10,7 @@
   color: var(--color-white);
 
   &--new {
-    background: var(--color-red);
+    background: var(--color-yellow);
   }
 
   &--changed {
