--- a/src/components/Chart/chart.scss
+++ b/src/components/Chart/chart.scss
@@ -4,6 +4,7 @@
     text-align: center;
     position: relative;
     margin: 0 auto;
+    border-radius: 50px;
 }
 
 .chart .blip:hover {
@@ -18,3 +19,4 @@
 .chart .ring-label {
     text-transform: uppercase;
 }
+
