fixing the logo of the partners

--- a/src/styles/components/markdown.scss
+++ b/src/styles/components/markdown.scss
@@ -41,8 +41,9 @@
 
   img {
     max-width: 100%;
-    margin: 10 0 10 0;
-    float:right;
+    margin: 0 0 5 80;
+    height: 60px;
+
   }
 
   pre {
