--- a/src/styles/components/markdown.scss
+++ b/src/styles/components/markdown.scss
@@ -45,6 +45,10 @@
     position: absolute;
     margin-left: 290px;
     margin-top: -80px;
+    max-height: 100%;
+    min-width: 100px;
+    min-height: 100px;
+
   }
 
   pre {
