--- a/src/styles/components/markdown.scss
+++ b/src/styles/components/markdown.scss
@@ -41,13 +41,13 @@
 
   img {
     height: 60px;
-    max-width: 130px;
     position: absolute;
     margin-left: 290px;
     margin-top: -80px;
-    max-height: 100px;
-    min-width: 100px;
-    min-height: 50px;
+    // max-width: 130px;
+    // max-height: 100px;
+    // min-width: 100px;
+    // min-height: 50px;
 
   }
 
