--- a/src/styles/components/markdown.scss
+++ b/src/styles/components/markdown.scss
@@ -39,7 +39,7 @@
     margin: 1em 0;
   }
 
-  img {
+  img:first-child {
     height: 60px;
     position: absolute;
     margin-left: 290px;
@@ -48,7 +48,6 @@
     // max-height: 100px;
     // min-width: 100px;
     // min-height: 50px;
-
   }
 
   pre {
